add circle_q functionality, outline main routine

--- a/Transport/Makefile
+++ b/Transport/Makefile
@@ -1,4 +1,4 @@
-OBJ = main.o helpers.o
+OBJ = main.o helpers.o circle_q.o
 
 transport: $(OBJ)
 	gcc -std=gnu17 -o transport $(OBJ)
@@ -8,6 +8,9 @@ main.o: main.c header.h
 
 helpers.o: helpers.c header.h
 	gcc -std=gnu17 -c -Og -Wall -Wextra -Werror helpers.c
+
+circle_q.o: circle_q.c header.h
+	gcc -std=gnu17 -c -Og -Wall -Wextra -Werror circle_q.c
 
 clean:
 	rm -f $(OBJ)
